kubernetes/apps/infrastructure/forgejo/app/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-route-tcp-ssh
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`forgejo-ssh.milim.samoth.eu`)
      services:
        - name: forgejo-ssh
          port: 22
  tls: {}
